<resources>
    <string name="app_name">Job Portal Worldwide</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>

    <string name="no_item_found">No Jobs Found</string>

    <string name="drawer_open">Drawer Open</string>
    <string name="drawer_close">Drawer Close</string>

    <string name="apply_now">Apply Now</string>
    <string name="save_job">Save this Job</string>
    <string name="save_job_already">Already Saved</string>
    <string name="job_description">Job Description</string>
    <string name="job_skill">Job Experience and Skills</string>
    <string name="job_qualification">Job Qualification</string>
    <string name="job_salary">Salary and Benefits</string>

    <string name="name">Name :-</string>
    <string name="email">Email :-</string>
    <string name="telephone">Telephone :-</string>
    <string name="city">City :-</string>
    <string name="address">Address :-</string>
    <string name="password">Password :-</string>

    <string name="version">Version</string>
    <string name="author">Author</string>
    <string name="company">Company</string>
    <string name="email_ab">Email</string>
    <string name="website">Website</string>
    <string name="contact">Contact</string>
    <string name="about">About</string>

    <!--left navigation drawer-->
    <string name="menu_latest">Latest Jobs</string>
    <string name="menu_category">Jobs By Country</string>
    <string name="menu_favourite">Saved Jobs</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_rate_app">Rate App</string>
    <string name="menu_share_app">Share App</string>
    <string name="menu_about">About Us</string>
    <string name="menu_search">Search</string>
    <string name="menu_privacy">Privacy Policy</string>
    <string name="menu_logout">Logout</string>

    <!-- connection message -->
    <string name="conne_msg1">No Network Connection!!!</string>
    <string name="conne_msg2">Please connect to working Internet connection</string>
    <string name="nodata">No Data Found</string>

    <!--Login/Sign Up-->
    <string name="name_login_lbl">Name</string>
    <string name="name_login">Enter Name</string>
    <string name="email_login_lbl">Email</string>
    <string name="email_login">Enter Email</string>
    <string name="password_login_lbl">Password</string>
    <string name="password_login">Enter Password</string>
    <string name="phone_login_lbl">Phone</string>
    <string name="phone_login">Enter Phone# with Country Code</string>
    <string name="login">LOG IN</string>
    <string name="skip">DEMO</string>
    <string name="forgot_password">Forgot Password ?</string>
    <string name="no_account">DON\'T HAVE AN ACCOUNT?</string>
    <string name="sign_up">SIGN UP</string>
    <string name="register">Register</string>
    <string name="already_account">ALREADY HAVE AN ACCOUNT?</string>
    <string name="enter_city">Enter City</string>
    <string name="enter_address">Enter Address</string>
    <string name="submit">Submit</string>

    <string name="logout_msg">Are you sure you want to logout?</string>
    <string name="menu_edit_profile">Edit Profile</string>

    <string name="favourite_add">Job has been Saved</string>
    <string name="favourite_remove">Job has been Removed</string>

    <string name="share_msg">Hi,I would like to share Application which is used to find job free please download it from Google Play Store Free Here \n https://play.google.com/store/apps/details?id=</string>
    <string name="default_email">Worldwide</string>

    <string name="admob_banner_id">ca-app-pub-3602095004977294/4303208418</string> <!-- Change AdMob Banner Id -->
    <string name="admob_interstitial_id">ca-app-pub-3602095004977294/9208050737</string> <!-- Change AdMob Interstitial Id -->

    <string name="exit">Exit</string>
    <string name="exit_msg">Daily Jobs Updating! Visit Again!</string>
    <string name="need_login">Buy Premium to Apply Jobs Directly</string>
    <string name="visible_to_premium">Visible to Premium Members Only</string>
    <string name="btn_buy_premium">SignUp for Premium</string>
    <string name="buy_premium">Buy Premium</string>
    <string name="premium_url">http://jobportal.pw/product/jobportal-global/</string>
    <string name="credit_debit">PAY BY CREDIT/DEBIT CARD</string>
    <string name="via_mobile_balance">PAY BY PREPAID MOBILE BALANCE</string>
    <string name="paypal">PAY BY PAYPAL</string>
    <string name="premium_url_mobilepay">http://jobportal.pw/product/jobportal-global/</string>
    <string name="premium_url_paypal">http://jobportal.pw/product/jobportal-global/</string>
    <string name="job_portal_pro">Job Portal Android Pro</string>
    <string name="job_portal_pro_detail">The JSON Formatter was created to help with debugging. As JSON data is often output without line breaks to save space, it is extremely difficult to actually read and make sense of it. This little tool hoped to solve the problem.</string>
    <string name="validity">Validity</string>
    <string name="validity_detail">PhotoShop | illustrator | Java | Core</string>
    <string name="pricing">Pricing</string>
    <string name="pricing_detail">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry.</string>
    <string name="paymart">Pay By PayMart</string>
</resources>
