<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.app.jobportalw.PaymentActivity">


    <ImageView
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="#224364"
        android:padding="5dp"
        android:src="@drawable/image_png" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:overScrollMode="never">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">


            <android.support.v7.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:elevation="3dp"
                app:cardCornerRadius="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical"
                    android:padding="5dp">

                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2.2dp"
                        android:text="@string/job_portal_pro"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/job_portal_pro_detail" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/grey" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2.2dp"
                        android:text="@string/validity"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/validity_detail" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="0.5dp"
                        android:layout_marginTop="5dp"
                        android:background="@color/grey" />


                    <TextView
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="2.2dp"
                        android:text="@string/pricing"
                        android:textColor="@color/colorAccent"
                        android:textSize="16sp" />


                    <TextView

                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:padding="3dp"
                        android:text="@string/pricing_detail" />


                </LinearLayout>


            </android.support.v7.widget.CardView>


            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/activity_horizontal_margin"
                android:layout_marginLeft="@dimen/activity_horizontal_margin"
                android:layout_marginRight="@dimen/activity_horizontal_margin"
                android:layout_marginTop="20dp"
                android:orientation="vertical">


                <Button
                    android:id="@+id/button_link_indian"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:background="@drawable/rectanglefilled"
                    android:elevation="3dp"
                    android:text="@string/credit_debit"
                    android:textColor="@color/white"
                    android:textSize="18sp" />

                <Button
                    android:id="@+id/button_mobile_pay"
                    style="?android:attr/buttonBarButtonStyle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/rectanglefilled"
                    android:elevation="3dp"
                    android:text="@string/via_mobile_balance"
                    android:textColor="@color/white"
                    android:textSize="18sp" />


                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:paddingBottom="10dp"
                    android:weightSum="2">

                    <Button
                        android:id="@+id/button_paypal"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginRight="2.5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rectanglefilled"
                        android:elevation="3dp"
                        android:text="@string/paypal"
                        android:textColor="@color/white"
                        android:textSize="18sp" />

                    <Button
                        android:id="@+id/button_paymart"
                        style="?android:attr/buttonBarButtonStyle"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginLeft="2.5dp"
                        android:layout_weight="1"
                        android:background="@drawable/rectanglefilled"
                        android:elevation="3dp"
                        android:text="@string/paymart"
                        android:textColor="@color/white"
                        android:textSize="18sp" />


                </LinearLayout>


            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
