<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:card_view="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/bg">

    <include
        android:id="@+id/toolbar_main"
        layout="@layout/row_toolbar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true" />

    <ProgressBar
        android:id="@+id/progressBar1"
        style="?android:attr/progressBarStyleLarge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:layout_centerVertical="true"
        android:visibility="gone" />

    <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/toolbar_main">

        <LinearLayout
            android:id="@+id/content"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="8dp">

            <android.support.v7.widget.CardView
                android:id="@+id/card_view"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="2dp"
                card_view:cardBackgroundColor="@color/white"
                card_view:cardCornerRadius="2dp"
                card_view:cardUseCompatPadding="false"
                card_view:elevation="5dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:padding="6dp">

                    <RelativeLayout
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="10dp">

                        <cn.gavinliu.android.lib.shapedimageview.ShapedImageView
                            android:id="@+id/image_profile"
                            android:layout_width="100dp"
                            android:layout_height="100dp"
                            android:layout_centerHorizontal="true"
                            android:layout_centerVertical="true"
                            android:contentDescription="@string/app_name"
                            android:src="@mipmap/ic_launcher"
                            card_view:shape_mode="circle"
                            card_view:stroke_color="@color/line"
                            card_view:stroke_width="4dp" />


                    </RelativeLayout>

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="10dp"
                        android:background="@color/divider" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/name"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/text_content" />

                    <EditText
                        android:id="@+id/edt_name"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_corner"
                        android:hint="@string/name_login"
                        android:inputType="textPersonName"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/black"
                        android:textColorHint="@color/line"
                        android:textCursorDrawable="@drawable/cursor_black" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/divider" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/email"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/text_content" />

                    <EditText
                        android:id="@+id/edt_email"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_corner"
                        android:hint="@string/email_login"
                        android:inputType="textEmailAddress"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/black"
                        android:textColorHint="@color/line"
                        android:textCursorDrawable="@drawable/cursor_black" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/divider" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/password"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/text_content" />

                    <EditText
                        android:id="@+id/edt_password"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_corner"
                        android:hint="@string/password_login"
                        android:inputType="textPassword"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/black"
                        android:textColorHint="@color/line"
                        android:textCursorDrawable="@drawable/cursor_black" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/divider" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/telephone"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/text_content" />

                    <EditText
                        android:id="@+id/edt_phone"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_corner"
                        android:hint="@string/phone_login"
                        android:inputType="phone"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/black"
                        android:textColorHint="@color/line"
                        android:textCursorDrawable="@drawable/cursor_black" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/divider" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/city"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/text_content" />

                    <EditText
                        android:id="@+id/edt_city"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_corner"
                        android:hint="@string/enter_city"
                        android:inputType="textPersonName"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/black"
                        android:textColorHint="@color/line"
                        android:textCursorDrawable="@drawable/cursor_black" />

                    <View
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_marginBottom="8dp"
                        android:layout_marginTop="8dp"
                        android:background="@color/divider" />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/address"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/text_content" />

                    <EditText
                        android:id="@+id/edt_address"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:background="@drawable/edittext_corner"
                        android:hint="@string/enter_city"
                        android:inputType="textPersonName"
                        android:textAppearance="?android:attr/textAppearanceSmall"
                        android:textColor="@color/black"
                        android:textColorHint="@color/line"
                        android:textCursorDrawable="@drawable/cursor_black" />


                </LinearLayout>
            </android.support.v7.widget.CardView>

        </LinearLayout>
    </ScrollView>


</RelativeLayout>